--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,30 @@ name = "pypi"
 flake8 = "==3.7.0"
 pytest-django = "==3.9.0"
 Django = "==3.0"
-django-on-heroku = "*"
-sentry-sdk = "*"
+django-on-heroku = "==1.1.2"
+sentry-sdk = "==1.5.5"
+asgiref = "==3.5.0"
+atomicwrites = "==1.4.0"
+attrs = "==21.4.0"
+certifi = "==2021.10.8"
+colorama = "==0.4.4"
+dj-database-url = "==0.5.0"
+entrypoints = "==0.3"
+iniconfig = "==1.1.1"
+mccabe = "==0.6.1"
+pluggy = "==1.0.0"
+psycopg2-binary = "==2.9.3"
+py = "==1.11.0"
+pycodestyle = "==2.5.0"
+pyflakes = "==2.1.1"
+pyparsing = "==3.0.7"
+pytest = "==7.0.1"
+pytz = "==2021.3"
+sqlparse = "==0.4.2"
+tomli = "==2.0.1"
+urllib3 = "==1.26.8"
+whitenoise = "==6.0.0"
+decouple = "*"
 
 [dev-packages]
 
