--- a/Pipfile
+++ b/Pipfile
@@ -30,7 +30,7 @@ sqlparse = "==0.4.2"
 tomli = "==2.0.1"
 urllib3 = "==1.26.8"
 whitenoise = "==6.0.0"
-decouple = "*"
+python-decouple = "*"
 
 [dev-packages]
 
