--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
       - image: cimg/python:3.10.2
     steps:
       - checkout
+      - setup_remote_docker
+      - docker/build:
+          image: p13orangecountylettings
       - python/install-packages:
           pkg-manager: pip
       - run:
