--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,10 @@ python-decouple = "*"
 python-dotenv = "*"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3.10"
+
+[pipenv]
+allow_prereleases = true
